Fixed basic buttons alignment

--- a/styles/my-calc.css
+++ b/styles/my-calc.css
@@ -6,12 +6,14 @@
 body {
     background-image: url(/images/Windows-11-Bloom-Screensaver-Dark-scaled.jpg);
     background-size: cover;
+    display: flex;
+    margin-top: 40px;
 
 }
 .calculator-container {
     background-color: #1B1F32;
-    width: 300px;
-    height: 470px;
+    width: 400px;
+    height: 570px;
     margin: auto;
     border-radius: 9px;
 }
@@ -24,14 +26,18 @@ body {
 
 .historical-type {
     height: 8%;
-    background-color: #283575;
 }
 
 .screen {
-    height: 19%;
+    height: 15%;
     background-color: #1B1F32;
     font-size: xxx-large;
-    justify-items: end;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    margin: 10px;
+
+
     
 }
 
@@ -68,12 +74,12 @@ body {
 }
 
 .basic-operators-button {
-    flex-wrap: wrap;
     background-color: #2D3145;
     width: 24%;
-    height: 100%;
-    text-align: center;
-    justify-self: center;
+    height: 98%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
     cursor: pointer;
 }
